# sannai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agent/: CLAUDE.md  Cargo.toml  e2e-test-marker.txt
agent/src/: config.rs  lib.rs  main.rs  sweep.rs
agent/src/api/: mod.rs
agent/src/comment/: format.rs  github.rs
agent/src/daemon/: mod.rs
agent/src/git/: attribute.rs  mod.rs  observer.rs  tool_detect.rs
agent/src/hook/: mod.rs
agent/src/parser/: mod.rs
agent/src/process/: analyzer.rs
agent/src/provenance/: attribution.rs  interaction.rs  lineage.rs  mod.rs  summary.rs
agent/src/service/: mod.rs
agent/src/session/: mod.rs
agent/src/store/: mod.rs
agent/src/watcher/: mod.rs
agent/tests/: daemon_e2e.rs  git_integration.rs  real_session.rs  real_session_daemon.rs
agent/tests/fixtures/: real_session.jsonl
api/: CLAUDE.md  go.mod
api/migrations/: 001_init.sql
docs/: agentlens-pricing.md  agentlens-tech-stack.md  name.txt
docs/designs/: 2026-03-08-deep-git-provenance.md  2026-03-09-process-audit.md  2026-03-11-open-source-release.md
docs/plans/: 2026-03-08-deep-git-provenance.md  2026-03-09-process-audit.md  2026-03-11-open-source-release.md
hooks/: link-commit.sh  post-pr-comment.sh  post-push-comment.sh
scripts/: generate-fake-session.sh  manual-test.sh
skills/provenance/: SKILL.md
web/: CLAUDE.md  package-lock.json  package.json  vite.config.ts
(+14 files in other folders)
